# wm

./: .dockerignore  .env.example  .gitignore  404.html  PLAN.md  README.md  ROADMAP.md  index.html  likec4-views.js  model.json  pyproject.toml
.github/workflows/: deploy-likec4-pages.yml  python-ci.yml
apps/config_registry/: README.md  pyproject.toml
apps/config_registry/migrations/: env.py
apps/config_registry/src/config_registry/: __init__.py  __main__.py  main.py  settings.py
apps/config_registry/src/config_registry/api/: dependencies.py
apps/config_registry/src/config_registry/api/routers/: agents.py  assets.py  points.py  sources.py  tenants.py
apps/config_registry/src/config_registry/api/schemas/: agents.py  assets.py  config_revisions.py  points.py  sources.py  tenants.py
apps/config_registry/src/config_registry/application/: errors.py
apps/config_registry/src/config_registry/application/ports/: config_delivery.py  config_validation.py  unit_of_work.py
apps/config_registry/src/config_registry/application/use_cases/: agents.py  assets.py  config_event_publisher.py  config_outbox.py  points.py  render_config.py  sources.py  tenants.py
apps/config_registry/src/config_registry/domain/: entities.py  value_objects.py
apps/config_registry/src/config_registry/infrastructure/: backoffice.py  json_schema_validator.py
apps/config_registry/src/config_registry/infrastructure/kafka/: config_delivery.py
apps/config_registry/src/config_registry/infrastructure/memory/: unit_of_work.py
apps/config_registry/src/config_registry/infrastructure/postgres/: models.py  unit_of_work.py
apps/config_registry/tests/: test_agent_use_cases.py  test_api.py  test_asset_use_cases.py  test_backoffice.py  test_config_event_publisher_use_case.py  test_config_outbox_use_cases.py  test_kafka_config_delivery.py  test_point_use_cases.py  test_render_config_use_case.py  test_settings.py  test_source_use_cases.py  test_tenant_use_cases.py
apps/config_registry_api/: README.md  pyproject.toml
apps/config_registry_api/tests/: test_api.py  test_tenant_use_cases.py
apps/edge_agent/: README.md  pyproject.toml
apps/edge_agent/config/: README.md
apps/edge_agent/docs/: data-contracts.md  mqtt-topics.md
apps/edge_agent/tests/: test_catalog.py  test_cli.py  test_configuration.py  test_delivery.py  test_identity.py  test_mqtt_publisher.py  (+3 more)
apps/knx_demo/: README.md
apps/platform_api/: README.md  pyproject.toml
apps/platform_config_api/: README.md  pyproject.toml
apps/wm_config_registry/: README.md  pyproject.toml
apps/wm_edge_agent/: README.md  pyproject.toml
apps/wm_knx_demo/: README.md  pyproject.toml
arch/: README.md  likec4.config.json  package-lock.json  package.json
arch/likec4/: actors.c4  model.c4  specification.c4  views.c4
assets/: i-0S_OQDjT.js  i-9o_XVwX3.js  i-BD09J5Ta.js  i-BFkKRFL0.js  i-BNj2oSwb.js  i-BRX_36Au.js  i-Be_m9ODM.js  i-Bg9-XWeQ.js  i-BgO708MD.js  i-C3GUxvEw.js  i-CN6z8aGe.js  i-CVnlt3yD.js  i-CXcv-3UL.js  i-CbqL1Yhy.js  i-Crs8DRbL.js  i-CzvGPdzD.js  i-DJbxkC9N.js  i-DMuxR51L.js  i-DS0yuJZN.js  i-DZuuznP_.js  i-D_lOs1M-.js  i-Dmi-PzEA.js  i-GhlhX6mP.js  i-ZHfcwaHI.js  i-jRqlYLIC.js  i-wHhcfJP3.js  index-0_R3nnfF.js  index-6MC7Wg_F.js  index-BHfW2uRe.js  index-BK3UNq39.js  index-BWYnKNtI.js  index-BfajUcCi.js  index-CBEPMQU0.js  index-Cfv71X1q.js  index-CjK86Vt9.js  index-Cocp2jfG.js  index-Cqw-OMox.js  index-CuhaO6GI.js  index-D8dBWLs0.js  index-DB6p35Ug.js  (+90 more)
config/: README.md  agent.example.yaml
docs/: future-ideas.md
docs/architecture/: README.md  clickhouse-analytics-readiness.md  current-state.md  data-contracts.md  glossary.md  knx-demo-stand-connection.md  knx-opc-ua-bridge-analysis.md  likec4-github-pages.md  opc-ua-vs-opc-da.md  open-questions.md  solution-architecture.md
docs/contracts/: README.md
environments/demo-stand/: README.md
environments/demo-stand-remote/: README.md
infra/local/: README.md  compose.yaml  up-platform.sh
knx_demo/cli/: __init__.py
knx_parser/: README.md
knx_parser/tests/: test_parser.py
libs/knx_parser/: README.md  pyproject.toml
libs/wm_demo_stack/: README.md  pyproject.toml
libs/wm_demo_stack/src/wm_demo_stack/: __init__.py  bundle.py  cli.py  config_registry_client.py  kafka_publisher.py  models.py  publisher.py  retained_config.py  scenario.py
libs/wm_demo_stack/tests/: test_scenario.py
libs/wm_knx_parser/: README.md  pyproject.toml
libs/wm_knx_parser/src/wm_knx_parser/: __init__.py  cli.py  parser.py
libs/wm_knx_parser/tests/: test_parser.py
tests/: test_read_signals.py
tests/integration/: conftest.py  test_config_registry_kafka_publisher.py  test_config_registry_postgres.py  test_edge_agent_knx_to_grafana.py  test_edge_agent_knx_to_mqtt.py  test_edge_agent_mqtt_publisher.py  test_grafana_clickhouse.py  test_kafka_to_clickhouse_storage.py  test_local_mqtt_grafana.py
tools/clickhouse_migrations/: README.md
tools/wm_clickhouse_migrations/: README.md  pyproject.toml
(+301 files in other folders)
