[project]
name = "web-monitoring"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
integration = [
    "paho-mqtt>=2.1.0",
    "playwright>=1.58.0",
    "pytest>=9.0.2",
]
lint = [
    "ruff>=0.15.8",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "apps/*",
    "libs/*",
]

[tool.pytest.ini_options]
markers = [
    "integration: end-to-end checks for dockerized local infrastructure",
]

[tool.ruff]
line-length = 88
target-version = "py312"
src = [
    "apps/edge_agent/src",
    "apps/knx_demo/src",
    "libs/knx_parser/src",
    "libs/wm_demo_stack/src",
    "tests",
]

[tool.ruff.lint]
extend-select = ["I"]
