[project]
name = "web-monitoring"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "edge-agent",
    "platform-config-api",
    "wm-demo-stack",
    "wm-clickhouse",
]

[dependency-groups]
integration = [
    "paho-mqtt>=2.1.0",
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
]
lint = [
    "ruff>=0.15.8",
]

[tool.uv]
package = false

[tool.uv.sources]
edge-agent = { workspace = true }
platform-config-api = { workspace = true }
wm-demo-stack = { workspace = true }
wm-clickhouse = { workspace = true }

[tool.uv.workspace]
members = [
    "apps/*",
    "libs/*",
    "tools/*",
]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
markers = [
    "integration: end-to-end checks for dockerized local infrastructure",
]

[tool.ruff]
line-length = 88
target-version = "py312"
src = [
    "apps/edge_agent/src",
    "apps/knx_demo/src",
    "apps/platform_config_api/src",
    "libs/knx_parser/src",
    "libs/wm_demo_stack/src",
    "tools/clickhouse_migrations/src",
    "tests",
]

[tool.ruff.lint]
extend-select = ["I"]
