[project]
name = "web-monitoring"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "edge-agent",
    "wm-demo-stack",
    "wm-clickhouse",
]

[dependency-groups]
integration = [
    "paho-mqtt>=2.1.0",
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
]
lint = [
    "ruff>=0.15.8",
]
coverage = [
    "coverage[toml]>=7.13.5",
    "genbadge[coverage]>=1.1.3",
]

[tool.uv]
package = false

[tool.uv.sources]
edge-agent = { workspace = true }
wm-demo-stack = { workspace = true }
wm-clickhouse = { workspace = true }

[tool.uv.workspace]
members = [
    "apps/*",
    "libs/*",
    "tools/*",
]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
markers = [
    "integration: end-to-end checks for dockerized local infrastructure",
]

[tool.ruff]
line-length = 88
target-version = "py312"
src = [
    "apps/edge_agent/src",
    "apps/knx_demo/src",
    "libs/knx_parser/src",
    "libs/wm_demo_stack/src",
    "tools/clickhouse_migrations/src",
    "tests",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.coverage.run]
branch = true
relative_files = true
source = [
    "apps/edge_agent/src/edge_agent",
    "apps/knx_demo/src/knx_demo",
    "libs/knx_parser/src/knx_parser",
    "libs/wm_demo_stack/src/wm_demo_stack",
    "tools/clickhouse_migrations/src/wm_clickhouse",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
