[project]
name = "wm-demo-stack"
version = "0.1.0"
description = "Reusable demo MQTT/Grafana stack helpers for local development"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "paho-mqtt>=2.1.0",
]

[project.scripts]
publish-grafana-demo = "wm_demo_stack.cli:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
